fixed the shifting icons thing

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -357,6 +357,8 @@ section#home{
 }
 .prize-coin{
   width:20vw;
+  height: 20vw;
+  /*height and width are on view width units to keep the circles cimetric.*/
   margin:0 auto;
   max-height: 300px;
   max-width: 300px;
